almost fix dark mode

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -50,7 +50,7 @@ form input, form textarea {
 @media (prefers-color-scheme: dark) {
   body {
     color: #f8f8f8;
-    background-color: #333;
+    background-color: #000;
   }
 
   form input, form textarea {
